My first commit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,9 @@
 		"moduleResolution": "bundler"
 	},
 	"include": [
-		"src"
-	]
+		"src",
+		"src/**/*.d.ts"
+	],
 	// Path aliases are handled by https://svelte.dev/docs/kit/configuration#alias
 	// except $lib which is handled by https://svelte.dev/docs/kit/configuration#files
 	//
