--- a/package.json
+++ b/package.json
@@ -39,8 +39,8 @@
 	"dependencies": {
 		"@prisma/client": "^6.15.0",
 		"chart.js": "^4.5.0",
+		"chartjs-plugin-zoom": "^2.2.0",
 		"papaparse": "^5.5.3",
-		"svelte-chartjs": "^3.1.5",
 		"zod": "^4.1.5"
 	}
 }
